--- a/blue.html
+++ b/blue.html
@@ -22,7 +22,7 @@
             Blueberries
         </h3>
 
-        <img src="images/blueberries.jpg" alt="a picture of some blueberries">
+        <img src="Images/blueberries.jpg" alt="a picture of some blueberries">
         <p>
             Blueberries carefully hand-picked by our "paid" employees.
             <br>
@@ -37,7 +37,7 @@
             Butterfly
         </h3>
 
-        <img src="images/butterfly.webp" alt="a picture of a blue butterfly">
+        <img src="Images/butterfly.webp" alt="a picture of a blue butterfly">
         <p>
             As you can see in this picture, the butterfly actually 
             <br>
@@ -56,7 +56,7 @@
             Blue Crayons
         </h3>
 
-        <img src="images/crayon.jpg" alt="a picture of blue crayons">
+        <img src="Images/crayon.jpg" alt="a picture of blue crayons">
         <p>
             Exclusively blue set of crayons. 
             <br>
@@ -69,7 +69,7 @@
             Blue Man Group
         </h3>
 
-        <img src="images/man.jpg" alt="a picture of the blue man group">
+        <img src="Images/man.jpg" alt="a picture of the blue man group">
         <p>
             These people are the epitome of our store, they bleached themselves
             <br>
