--- a/green.html
+++ b/green.html
@@ -22,7 +22,7 @@
             Avocado
         </h3>
 
-        <img src="images/avocado.webp" alt="a picture of an avocado">
+        <img src="Images/avocado.webp" alt="a picture of an avocado">
         <p>
             The Avocado an exotic fruit found only by digging into
             <br> 
@@ -39,7 +39,7 @@
             Grass
         </h3>
     
-        <img src="images/grass.jpg" alt="a picture of grass">
+        <img src="Images/grass.jpg" alt="a picture of grass">
         <p>
             The grass that we sell isn't any of that cheap stuff like sod.
             <br>
@@ -52,7 +52,7 @@
             Green Desk
         </h3>
 
-        <img src="images/desk.jfif" alt="a picture of a green desk">
+        <img src="Images/desk.jfif" alt="a picture of a green desk">
         <p>
             Vintage Green Desk
             <br>
@@ -63,7 +63,7 @@
             Mike Wazowski
         </h3>
 
-        <img src="images/mike.webp" alt="a picture of Mike Wazowski">
+        <img src="Images/mike.webp" alt="a picture of Mike Wazowski">
         <p>
             An exotic creature that we can't wait to get rid of... 
             <br>
