--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             RGB: The Primary Colors Store
         </h1>
 
-        <img src="images/RGB.jpg" alt="A picture of a red, blue, and green background">
+        <img src="Images/RGB.jpg" alt="A picture of a red, blue, and green background">
 
         <p class="home">
             Hi, we are RGB. We are a company that believes that the true Primary
