--- a/red.html
+++ b/red.html
@@ -23,7 +23,7 @@
             Red Buttons
         </h3>
 
-        <img src="images/button.jpg" alt="a picture of a singular red button">
+        <img src="Images/button.jpg" alt="a picture of a singular red button">
         <p>
             Have you ever wanted to crash a wedding? But when you put on your 
             <br>
@@ -39,7 +39,7 @@
             Red M&M's
         </h3>
 
-        <img src="images/redcandy.jfif" alt="a picture of red m&m's">
+        <img src="Images/redcandy.jfif" alt="a picture of red m&m's">
         <p>
             When I was a child I looked through the m&m's that my
             <br>
@@ -56,7 +56,7 @@
             Rubies
         </h3>
 
-        <img src="images/ruby.jpg" alt="a picture of a ruby">
+        <img src="Images/ruby.jpg" alt="a picture of a ruby">
         <p>
             These may or may not be ring pops in disguise.
             <br>
@@ -67,7 +67,7 @@
             Salmon
         </h3>
 
-        <img src="images/salmon.jpg" alt="a picture of a kokanee salmon">
+        <img src="Images/salmon.jpg" alt="a picture of a kokanee salmon">
 
         <p>
             These salmon are a seasonal item in our shop. These
